--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,16 +1,19 @@
-name: 'Lint Code'
+name: Lint Code
 
 on:
   push:
-    branches: [master, main]
+    branches:
+      - master
+      - main
   pull_request:
-    branches: [master, main]
+    branches:
+      - master
+      - main
 
 jobs:
   lint_python:
     name: Lint Python Files
     runs-on: ubuntu-latest
-    
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v3
@@ -22,35 +25,4 @@ jobs:
       
       - name: Install dependencies
         run: |
-          python -m pip install --upgrade pip
-          pip install flake8
-      
-      - name: Print working directory
-        run: pwd
-      
-      - name: Run Linter
-        run: |
-          pwd
-          find . -name "*.py" -exec flake8 {} +
-          echo "Linted all the python files successfully"
-
-  lint_js:
-    name: Lint JavaScript Files
-    runs-on: ubuntu-latest
-    
-    steps:
-      - name: Checkout Repository
-        uses: actions/checkout@v3
-      
-      - name: Install Node.js
-        uses: actions/setup-node@v3
-        with:
-          node-version: 14
-      
-      - name: Install JSHint
-        run: npm install jshint --global
-      
-      - name: Run Linter
-        run: |
-          find ./server/database -name "*.js" -exec jshint {} +
-          echo "Linted all the js files successfully"
+          python -m pip install --upgra
